# ExploringRust

./: Cargo.toml  README.md
02. Variables/variables2/src/: main.rs
03. Complex data types/arrays/src/: main.rs
03. Complex data types/slices/src/: main.rs
03. Complex data types/tuples/src/: main.rs
03. Complex data types/vectors/src/: main.rs
04. Strings/strings/src/: main.rs
05. Functions/functions/src/: main.rs
06. Control flow/iteration/src/: main.rs
06. Control flow/selection/src/: main.rs
07. Ownership/ownership/src/: main.rs
08. Structs/lifetimes/src/: main.rs
08. Structs/structs/src/: main.rs
09. Enums/enums/src/: main.rs
10. Generics/generics/src/: main.rs
11. Modules/todo/src/: lib.rs
12. Collections/rust_binary_heap/: Cargo.toml
12. Collections/rust_binary_heap/src/: main.rs
12. Collections/rust_maps/: Cargo.toml
12. Collections/rust_maps/src/: main.rs
12. Collections/rust_sets/: Cargo.toml
12. Collections/rust_sets/src/: main.rs
12. Collections/rustvectors/: Cargo.toml
12. Collections/rustvectors/src/: main.rs
13. Error Handling/errorhandling/src/: main.rs
14. Testing/testlib/src/: lib.rs
15. find and replace CLI program/cli/: Cargo.toml  test-mod.txt
15. find and replace CLI program/cli/src/: find_and_replace.rs  main.rs
Assignments/assignment1/src/: main.rs
Assignments/assignment2/src/: main.rs
Assignments/assignment3/src/: main.rs
Assignments/assignment4/src/: main.rs
Assignments/assignment5/: Cargo.toml
Assignments/assignment5/src/: main.rs
