[package]
name = "ExploringRust"
version = "0.1.0"
edition = "2021"

[dependencies]
[workspace]
members = [
    "Assignments/*",
    "01. Hello World/*",
    "02. Variables/*",
    "03. Complex data types/*",
    "04. Strings/*",
    "05. Functions/*",
    "06. Control flow/*",
    "07. Ownership/*",
    "08. Structs/*",
    "09. Enums/*", 
    "10. Generics/generics",
     "11. Modules/modules", 
     "11. Modules/todo", 
     "12. Collections/rustvectors", "12. Collections/rust_binary_heap", "12. Collections/rust_maps", "12. Collections/rust_sets", "13. Error Handling/errorhandling", "14. Testing/testing", "14. Testing/testlib", "15. find and replace CLI program/cli",
    
]
